--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>There is a lot of technical information in this FAQ, mostly for specific problems or specific use cases. For other more common questions, please see the tutorials below or contact me via <em>Get support</em> below.</p>
 <p><br /></p>
 <h2 id="tutorials">Tutorials</h2>
-<p>Please <a href="https://github.com/M66B/FairEmail/tree/master/tutorials">see here</a> for tutorials 📖.</p>
+<p>Please <a href="https://github.com/34j/FairEmailFree/tree/master/tutorials">see here</a> for tutorials 📖.</p>
 <p><br /></p>
 <h2 id="index">Index</h2>
 <ul>
@@ -2005,7 +2005,7 @@ category:promotions</code></pre>
 <p><del>Using <em>select account</em> to select and authorize Google accounts require special permission from Google for security and privacy reasons.</del> <del>This special permission can only be acquired for apps a developer manages and is responsible for.</del> <del>Third party builds, like the F-Droid builds, are managed by third parties and are the responsibility of these third parties.</del> <del>So, only these third parties can acquire the required permission from Google.</del> <del>Since these third parties do not actually support FairEmail, they are most likely not going to request the required permission.</del></p>
 <p><del>You can solve this in two ways:</del></p>
 <ul>
-<li><del>Switch to the official version of FairEmail, see <a href="https://github.com/M66B/FairEmail/blob/master/README.md#downloads">here</a> for the options</del></li>
+<li><del>Switch to the official version of FairEmail, see <a href="https://github.com/34j/FairEmailFree/blob/master/README.md#downloads">here</a> for the options</del></li>
 <li><del>Use app specific passwords, see <a href="#faq6">this FAQ</a></del></li>
 </ul>
 <p><del>Using <em>select account</em> in third party builds is not possible in recent versions anymore.</del> <del>In older versions this was possible, but it will now result in the error <em>UNREGISTERED_ON_API_CONSOLE</em>.</del></p>
@@ -2023,7 +2023,7 @@ category:promotions</code></pre>
 <p>OAuth for Outlook/Office 365, Yahoo, Mail.ru and Yandex is supported via the quick setup wizard.</p>
 <p>The OAuth <a href="https://oauth.faircode.eu/">jump page</a> exists for when <a href="https://developer.android.com/training/app-links/verify-site-associations">Android App Links</a> are not available, for example when using a non Play store version of the app, or do not work for some reason.</p>
 <p>OAuth is not supported for third party builds like the F-Droid build, please <a href="#faq147">see here</a> about why not.</p>
-<p>Since version 1.1859 there is support for custom OAuth. To use custom OAuth, an XML file containing the server and OAuth data, like the client secret, should be created and imported. Please <a href="https://github.com/M66B/FairEmail/blob/master/app/src/main/res/xml/providers.xml">see here</a> about how the XML file should look like. The XML file can be imported via a button in the debug panel of the miscellaneous settings of the app. To show the debug panel, debug mode mode should temporarily be enabled. After importing, you can use the quick setup wizard to configure an account.</p>
+<p>Since version 1.1859 there is support for custom OAuth. To use custom OAuth, an XML file containing the server and OAuth data, like the client secret, should be created and imported. Please <a href="https://github.com/34j/FairEmailFree/blob/master/app/src/main/res/xml/providers.xml">see here</a> about how the XML file should look like. The XML file can be imported via a button in the debug panel of the miscellaneous settings of the app. To show the debug panel, debug mode mode should temporarily be enabled. After importing, you can use the quick setup wizard to configure an account.</p>
 <p><br /></p>
 <p><a name="faq112"></a> <strong>(112) Which email provider do you recommend?</strong></p>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23faq112">Google Translate</a></p>
@@ -2052,7 +2052,7 @@ category:promotions</code></pre>
 <p><del>Email address <a href="https://material.io/design/components/chips.html">chips</a> look nice, but cannot be edited,</del> <del>which is quite inconvenient when you made a typo in an email address.</del></p>
 <p><del>Note that FairEmail will select the address only when long pressing an address, which makes it easy to delete an address.</del></p>
 <p><del>Chips are not suitable for showing in a list</del> <del>and since the message header in a list should look similar to the message header of the message view it is not an option to use chips for viewing messages.</del></p>
-<p><del>Reverted <a href="https://github.com/M66B/FairEmail/commit/2c80c25b8aa75af2287f471b882ec87d5a5a5015">commit</a>.</del></p>
+<p><del>Reverted <a href="https://github.com/34j/FairEmailFree/commit/2c80c25b8aa75af2287f471b882ec87d5a5a5015">commit</a>.</del></p>
 <p><br /></p>
 <p><a name="faq116"></a> <strong><del>(116) How can I show images in messages from trusted senders by default?</del></strong></p>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23faq116">Google Translate</a></p>
@@ -2386,7 +2386,7 @@ $NotDisplayed</code></pre>
 <p>Note that you’ll need to uninstall the F-Droid build first before you can install a GitHub release because Android refuses to install (“<em>App was not installed</em>”) the same app with a different signature for security reasons.</p>
 <p>At the start of 2024, the Play Store app started to update all apps, including apps not installed via the Play Store. Since the F-Droid build is signed by the F-Droid organization, which basically means the F-Droid build is another app, updating the F-Droid build will fail. Unfortunately, there is no way to resolve this.</p>
 <p>Note that the GitHub version will automatically check for updates. When desired, this can be turned off in the miscellaneous settings.</p>
-<p>Please <a href="https://github.com/M66B/FairEmail/blob/master/README.md#downloads">see here</a> for all download option and <a href="#faq173">see here</a> for the differences between the different release types.</p>
+<p>Please <a href="https://github.com/34j/FairEmailFree/blob/master/README.md#downloads">see here</a> for all download option and <a href="#faq173">see here</a> for the differences between the different release types.</p>
 <p>If you have a problem with the F-Droid build, please check if there is a newer GitHub version first.</p>
 <p>You can see the source of the app in <em>About</em> of the navigation menu (left side menu), either <em>Play store</em>, <em>GitHub</em>, <em>F-Droid</em>, or <em>?</em> (for example in the case of a custom build).</p>
 <p><a href="https://apt.izzysoft.de/fdroid/">IzzyOnDroid</a> hosts the GitHub release of the app. <a href="https://f-droid.org/packages/com.aurora.store/">Aurora Store</a> hosts the Play store version of the app, even though the Aurora Store app was downloaded from F-Droid.</p>
@@ -2548,7 +2548,7 @@ https://favicon.yandex.net/favicon/{domain}</code></pre>
 <p><br /></p>
 <p><a name="faq164"></a> <strong>(164) Can you add customizable themes?</strong></p>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23faq164">Google Translate</a></p>
-<p>Unfortunately, Android <a href="https://stackoverflow.com/a/26511725/1794097">does not support</a> dynamic themes, which means all themes need <a href="https://github.com/M66B/FairEmail/blob/master/app/src/main/res/values/styles.xml">to be predefined</a>.</p>
+<p>Unfortunately, Android <a href="https://stackoverflow.com/a/26511725/1794097">does not support</a> dynamic themes, which means all themes need <a href="https://github.com/34j/FairEmailFree/blob/master/app/src/main/res/values/styles.xml">to be predefined</a>.</p>
 <p>Since for each theme there needs to be a light, dark and black variant, it is not feasible to add for each color combination (literally millions) a predefined theme.</p>
 <p>Moreover, a theme is more than just a few colors. For example themes with a yellow accent color use a darker link color for enough contrast.</p>
 <p>Most people like the beige background for the light themes, but if you don’t like it, it can be disabled in the display settings.</p>
@@ -2667,14 +2667,14 @@ DNS lookup 108.27.250.142.zen.spamhaus.org -&gt;
 <li>The Play Store version does not support Gravatars/Libravatars/BIMI due to Play Store policies</li>
 <li>The Play Store version does not support auto-storing iCalendar invitations, see <a href="#faq186">this FAQ</a> for more information</li>
 <li>The Play Store version is released about once a month only because I am tired of 1-star ratings for <em>Too many updates</em>. If you want to receive more updates, you can join the <a href="https://play.google.com/apps/testing/eu.faircode.email">Play Store test program</a>.</li>
-<li>The GitHub version will check for <a href="https://github.com/M66B/FairEmail/releases">updates on GitHub</a> and is updated more frequently, but updates need to be installed manually</li>
+<li>The GitHub version will check for <a href="https://github.com/34j/FairEmailFree/releases">updates on GitHub</a> and is updated more frequently, but updates need to be installed manually</li>
 <li>The GitHub version has some different links, some more features and options, and some different default values (more geared to advanced users)</li>
 <li>The GitHub version can be installed as an update over the Play store version, whereas the F-Droid build can’t (see below for more details)</li>
 <li>The F-Droid build does not support OAuth, see <a href="#faq147">this FAQ</a> about why not</li>
 <li>The F-Droid build does not include <a href="https://developer.android.com/google/play/billing/integrate">Google Play Billing</a>, so Play store purchases cannot be reused</li>
 <li>The F-Droid build is supported only if the version number is the same as the version number of the latest GitHub version, see also <a href="#faq147">this FAQ</a></li>
 </ul>
-<p>The Play store and GitHub version are signed with the <a href="https://github.com/M66B/FairEmail#downloads">same digital signature</a> (security certificate). The F-Droid build is signed by the F-Droid organization with a different digital key. This means you can’t update the F-Droid build with the Play store or GitHub version or the other way around without reinstalling. However, it is possible to install the GitHub version over the Play store version, and the Play store app will do the same, when auto-updating isn’t disabled for the app in the app description.</p>
+<p>The Play store and GitHub version are signed with the <a href="https://github.com/34j/FairEmailFree#downloads">same digital signature</a> (security certificate). The F-Droid build is signed by the F-Droid organization with a different digital key. This means you can’t update the F-Droid build with the Play store or GitHub version or the other way around without reinstalling. However, it is possible to install the GitHub version over the Play store version, and the Play store app will do the same, when auto-updating isn’t disabled for the app in the app description.</p>
 <p>The version in the <a href="https://play.google.com/apps/testing/eu.faircode.email">Play Store test program</a> is more often updated, but not all GitHub releases will be released as Play Store test version.</p>
 <p>The GitHub version will automatically check for updates and notify you when there is an update available. Since apps can’t update themselves, updates can’t be automatically installed. However, you can easily install an update via a button in the update available notification. You could use the <a href="https://apt.izzysoft.de/fdroid/">IzzyOnDroid F-Droid Repository</a> to manage GitHub updates.</p>
 <p><br /></p>
@@ -2798,7 +2798,7 @@ _submission._tcp SRV 0 1 587 smtp.example.com.</code></pre>
 <p><a name="faq185"></a> <strong>(185) Can I install FairEmail on Windows?</strong></p>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23faq185">Google Translate</a></p>
 <p>Yes, you can if you use Windows 11 or later and install the <a href="https://learn.microsoft.com/en-us/windows/android/wsa/">Windows Subsystem for Android</a>.</p>
-<p>You’ll need to <a href="https://github.com/M66B/FairEmail/releases">download the GitHub version</a> of the app and sideload it, which means that you need to enable developer mode, please <a href="https://learn.microsoft.com/en-us/windows/android/wsa/#test-and-debug">see here</a>, and that you need to install adb (platform tools), <a href="https://developer.android.com/studio/command-line/adb">see here</a>.</p>
+<p>You’ll need to <a href="https://github.com/34j/FairEmailFree/releases">download the GitHub version</a> of the app and sideload it, which means that you need to enable developer mode, please <a href="https://learn.microsoft.com/en-us/windows/android/wsa/#test-and-debug">see here</a>, and that you need to install adb (platform tools), <a href="https://developer.android.com/studio/command-line/adb">see here</a>.</p>
 <p>You can install the app via the Windows command line like this:</p>
 <pre><code>cd /path/to/platform-tools
 adb connect 127.0.0.1:58526
@@ -2809,7 +2809,7 @@ adb install /path/to/FairEmail-xxx.apk</code></pre>
 <p><a name="faq186"></a> <strong>(186) How can I let the app auto store iCalendar invitations?</strong></p>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23faq186">Google Translate</a></p>
 <ul>
-<li>Install the <a href="https://github.com/M66B/FairEmail/releases">GitHub version</a> of the app</li>
+<li>Install the <a href="https://github.com/34j/FairEmailFree/releases">GitHub version</a> of the app</li>
 <li>Grant permissions via setup step 2 of the main settings screen</li>
 <li>Select a calendar in the accounts settings under <em>Manual setup and account options</em> (you can use the <em>Reset</em> button to disable storing invitations)</li>
 </ul>
@@ -3014,7 +3014,7 @@ adb install /path/to/FairEmail-xxx.apk</code></pre>
 <p>You can verify in this way that an APK file was built and signed by a GitHub workflow:</p>
 <ol type="1">
 <li>Install the <a href="https://cli.github.com/">GitHub CLI</a></li>
-<li>Download and extract the <a href="https://github.com/M66B/FairEmail/actions">APK files</a></li>
+<li>Download and extract the <a href="https://github.com/34j/FairEmailFree/actions">APK files</a></li>
 <li><a href="https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds#verifying-artifact-attestations-with-the-github-cli">Verify</a> attestation of an APK file</li>
 </ol>
 <pre><code>gh attestation verify xyz.apk -R M66B/FairEmail</code></pre>
@@ -3025,7 +3025,7 @@ adb install /path/to/FairEmail-xxx.apk</code></pre>
 </h2>
 <p>🌎 <a href="https://translate.google.com/translate?sl=en&amp;u=https%3A%2F%2Fm66b.github.io%2FFairEmail%2F%23get-support">Google Translate</a></p>
 <p>FairEmail is supported on Android smartphones and tablets and ChromeOS only.</p>
-<p>There is support only if the app was downloaded via one of the <a href="https://github.com/M66B/FairEmail#downloads">supported download locations</a>.</p>
+<p>There is support only if the app was downloaded via one of the <a href="https://github.com/34j/FairEmailFree#downloads">supported download locations</a>.</p>
 <p>Only the latest Play store version and latest GitHub release are supported. The F-Droid build is supported only if the version number is the same as the version number of the latest GitHub release. This also means that downgrading is not supported.</p>
 <p>There is no support for things that are not directly related to FairEmail.</p>
 <p>There is no support on building and developing things by yourself.</p>
